Bug 132461 - Dragging color from Color Bar to color field of interactive gradient tool is broken
Summary: Dragging color from Color Bar to color field of interactive gradient tool is ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-04-27 14:40 UTC by Regina Henschel
Modified: 2021-05-25 08:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Illustration of the situation (53.05 KB, application/vnd.oasis.opendocument.graphics)
2020-05-14 14:11 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-04-27 14:40:04 UTC
Draw a shape and set its filling to a gradient.
Select that shape and click on "Interactive gradient tool" in sub-toolbar "Transformations". You get a gradient-transformation-line on the shape with to color fields at the end.

Open "Color Bar". It is directly in menu View or in View->Toolbars, depending on the version of LibreOffice.

Drag a color from the Color Bar to the color fields at the gradient-transformation-line.

Expected: The gradient color is changed.

Seen: Drag is not possible. With mouse-down the shape already changes to solid fill and gets the chosen color as new fill color.

The ability to drag a color to the color-field is essential for the "Interactive gradient tool".

I see the error in Version: 7.0.0.0.alpha0+ (x64)
Build ID: f924658e45f256544e43c3fdb2af9b585d0f0933
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

It was OK in Version: 5.4.7.2 (x64)
Build-ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU-Threads: 8; BS: Windows 6.19; UI-Render: Standard; 
Gebietsschema: de-DE (en_US); Calc: CL
Comment 1 Regina Henschel 2020-04-27 15:26:12 UTC
It is OK in Version: 7.0.0.0.alpha0+ (x64)
Build ID: 6388c578c672690fff662cb04b6a0436cd742f37
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded

So quite new regression.
Comment 2 Xisco Faulí 2020-05-13 10:53:09 UTC
Reproduced in

Version: 7.0.0.0.alpha1+
Build ID: 1ffe59ef31186e36ad0aa7bbcdd32e407ee8d26c
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Xisco Faulí 2020-05-13 11:03:35 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3d79f395ea6b0a960051615a98bfe58387c7d231

author	Caolán McNamara <caolanm@redhat.com>	2020-04-24 20:34:32 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-25 21:50:47 +0200
commit 3d79f395ea6b0a960051615a98bfe58387c7d231 (patch)
tree e8e2efabc9b7e88072c4fd338eb85a94314ac809
parent 96e5121869e95a8e28788a91ce0dc480e5f10c0b (diff)
weld SvxColorDockingWindow

Bisected with: bibisect-linux64-6.5

Adding Cc: to Caolán McNamara
Comment 4 Caolán McNamara 2020-05-14 13:35:15 UTC
I'm not sure I see what's changed ? In 6.4 if a shape is selected and I click a color then the selected shape is changed to the clicked color. If no shape is selected I can drag a color from the colorbar and drop it over a shape and the shapes changes to the color. What interaction is different in master ?
Comment 5 Regina Henschel 2020-05-14 14:11:38 UTC
Created attachment 160819 [details]
Illustration of the situation

I have attached an illustration of what you need to do.
Comment 6 Caolán McNamara 2020-05-15 13:57:27 UTC
I think I understand now, dragging is possible, just useless because the color was set on the mouse down as opposed to on the mouse up, which had allowed a click, drag, drop, release to set the dragged color
Comment 7 Commit Notification 2020-05-15 15:28:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/23a1b7bad5147ee48d7f920085426d8846559af7

Resolves: tdf#132461 set color on mouse release, not press

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2020-05-15 15:34:43 UTC
does that solve the problem ?
Comment 9 Xisco Faulí 2020-05-19 18:23:08 UTC
Verified in

Version: 7.0.0.0.alpha1+
Build ID: 8209c2569f5726f9ed29f75d30efdccb94f98fe5
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!