Resolves: tdf#132461 set color on mouse release, not press

and rearrange to allow dnd to drop the currently selected color, not
the one seen by SelectHdl which is now called on mouse release

which allows the dnd from color bar to gradiant tool to work as
expected

Change-Id: Ib54850ff8f73dc3a0d08c76060309a7a74d2cc8b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94314
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>